feat: 서비스 리팩터링